Admin: fixed layout bugs and improved field semantics

--- a/admin/layout.css
+++ b/admin/layout.css
@@ -367,7 +367,7 @@ form.split .small,
 form.split .buttons {                           display: block;
                                                 margin: 0em 0em 1rem 45% }
 form.split input, form.split label + button {   margin-bottom: 0.5em }
-form.split input + input {                      display: block;
+form.split input + input:not(.filter) {         display: block;
                                                 margin-left: 45% }
 form.split input[type="text"],
 form.split input[type="email"],
